--- a/Web Frameworks/conFusion/css/mystyles.css
+++ b/Web Frameworks/conFusion/css/mystyles.css
@@ -70,3 +70,9 @@ body{
 box-shadow: 5px 12px 24px 1px rgba(148,148,148,1);
 }
 
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
