--- a/Web Frameworks/conFusion/css/mystyles.css
+++ b/Web Frameworks/conFusion/css/mystyles.css
@@ -2,7 +2,18 @@
     top:100px;
 }
 
-
+.carousel {
+    background:#1A237A;
+}
+.carousel .item {
+  height: 290px;
+}
+.item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 290px;
+}
 
 .row-header{
     margin:0px auto;
