--- a/Web Frameworks/conFusion/css/mystyles.css
+++ b/Web Frameworks/conFusion/css/mystyles.css
@@ -1,3 +1,7 @@
+h2 {font-weight: bold;}
+
+h3 {font-weight: bold;}
+
 .affix{
     top:100px;
 }
@@ -6,13 +10,13 @@
     background:#1A237A;
 }
 .carousel .item {
-  height: 290px;
+  height: 400px;
 }
 .item img {
     position: absolute;
     top: 0;
     left: 0;
-    min-height: 290px;
+    min-height: 400px;
 }
 
 .row-header{
@@ -86,6 +90,22 @@ body{
 -moz-box-shadow: 5px 5px 24px 1px rgba(148,148,148,1);
 box-shadow: 5px 12px 24px 1px rgba(148,148,148,1);
 }
+
+
+.card-bread{
+    -webkit-box-shadow: 2px 1px 14px 1px rgba(186,191,217,1);
+-moz-box-shadow: 2px 1px 14px 1px rgba(186,191,217,1);
+box-shadow: 2px 1px 14px 1px rgba(186,191,217,1);
+}
+
+
+.card-dialog
+{
+	-webkit-box-shadow: 6px 7px 14px 1px rgba(186,191,217,1);
+-moz-box-shadow: 6px 7px 14px 1px rgba(186,191,217,1);
+box-shadow: 6px 7px 14px 1px rgba(186,191,217,1);
+}
+
 
 .tab-content {
     border-left: 1px solid #ddd;
