--- a/Web Frameworks/conFusion/css/mystyles.css
+++ b/Web Frameworks/conFusion/css/mystyles.css
@@ -41,6 +41,7 @@ h3 {font-weight: bold;}
 .jumbotron {
     padding:70px 30px 70px 30px;
     margin:0px auto;
+    background-image: url("../img/jumb_bg.jpg");
     background-size: cover;
     color:floralwhite;
 }
