--- a/JQuery/MemeGenerator/style.css
+++ b/JQuery/MemeGenerator/style.css
@@ -1,4 +1,7 @@
-html, body {
+html,body{
+    background: lightgray;
+}
+body {
   margin: 0;
   padding: 0;
   font-family: "Open Sans", sans-serif;
@@ -18,16 +21,18 @@ html, body {
 .header h1 {
   margin: 0;
   display: inline-block;
-  color: lightgreen
+  color: lightblue
 }
 
-
+label {
+    color: aliceblue
+}
 .binput {
   display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  width: 150px;
+  width: 250px;
   height: 42px;
   cursor: pointer;
   top: 0;
@@ -63,7 +68,7 @@ html, body {
 }
 
 .binput:focus {
-  width: 213px;
+  width: 300px;
   cursor: default;
   padding: -13px 20px 0;
   color: rgba(255,255,255,1);
@@ -72,9 +77,6 @@ html, body {
   -o-transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
   transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
 }
-
-
-
 
 
 .h13d {
