--- a/parse-js-blank/css/styles.css
+++ b/parse-js-blank/css/styles.css
@@ -38,3 +38,111 @@ body {
     color: green;
     line-height: 13px;
 }
+
+
+
+label {
+    color: black;
+    font-family: cursive;
+    font-size: 20px;
+}
+input {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 300px;
+  height: 42px;
+  cursor: pointer;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 0 20px;
+  overflow: hidden;
+  border: none;
+  -webkit-border-radius: 21px;
+  border-radius: 21px;
+  font: normal 20px/normal "Antic", Helvetica, sans-serif;
+  color: rgba(140,140,140,1);
+  text-decoration: normal;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  background: rgba(40,40,40,0.4);
+  -webkit-box-shadow: 1px 1px 2px 0 rgba(0,0,0,0.5) inset;
+  box-shadow: 1px 1px 2px 0 rgba(0,0,0,0.5) inset;
+  -webkit-transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+  -moz-transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+  -o-transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+  transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+}
+
+input:hover {
+  color: rgba(181,181,181,1);
+  background: rgba(0,0,0,0.4);
+  -webkit-transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+  -moz-transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+  -o-transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+  transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+}
+
+input:focus {
+  width: 400px;
+  cursor: default;
+  padding: -13px 20px 0;
+  color: rgba(255,255,255,1);
+  -webkit-transition: all 1000ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+  -moz-transition: all 1000ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+  -o-transition: all 1000ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+  transition: all 1000ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+}
+
+.h3d {
+  margin: 0;
+  font: bold 100px/1 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #fff;
+  text-shadow: 0 1px 0 #cccccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbbbbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaaaaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.2), 0 20px 20px rgba(0, 0, 0, 0.15);
+  -webkit-transition: .2s all linear;
+}
+.h3d:hover {
+  cursor: text;
+}
+.h3d:focus {
+  outline: none;
+}
+
+.btn {
+  background: #0b2f47;
+  background-image: -webkit-linear-gradient(top, #0b2f47, #2980b9);
+  background-image: -moz-linear-gradient(top, #0b2f47, #2980b9);
+  background-image: -ms-linear-gradient(top, #0b2f47, #2980b9);
+  background-image: -o-linear-gradient(top, #0b2f47, #2980b9);
+  background-image: linear-gradient(to bottom, #0b2f47, #2980b9);
+  -webkit-border-radius: 30;
+  -moz-border-radius: 30;
+  border-radius: 30px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #33749c;
+  background-image: -webkit-linear-gradient(top, #33749c, #65b2e6);
+  background-image: -moz-linear-gradient(top, #33749c, #65b2e6);
+  background-image: -ms-linear-gradient(top, #33749c, #65b2e6);
+  background-image: -o-linear-gradient(top, #33749c, #65b2e6);
+  background-image: linear-gradient(to bottom, #33749c, #65b2e6);
+  text-decoration: none;
+}
+
+.regdiv{
+    height:250px;
+    border-radius: 31px 31px 31px 31px;
+    -moz-border-radius: 31px 31px 31px 31px;
+    -webkit-border-radius: 31px 31px 31px 31px;
+    border: 4px solid #8f9aba;
+    
+}
