Add a insert image function

--- a/meteor/image_share/image_share.css
+++ b/meteor/image_share/image_share.css
@@ -1,9 +1,9 @@
 /* CSS declarations go here */
 img {
-    width: 400px;
-    height: auto;
+    width: 250px;
+    height: 180px;
 }
 
 .small {
-    width: 250px;
+    width: 180px;
 }
