--- a/Coursera_AngularJS/conFusion/app/views/aboutus.html
+++ b/Coursera_AngularJS/conFusion/app/views/aboutus.html
@@ -54,10 +54,23 @@
         <div class="row row-content">
             <div class="col-xs-12 col-sm-9">
                 <h2>Corporate Leadership</h2>
-               <ul class="media-list">
-					<h4>Implement the Corporate Leaders List here</h4>
-               </ul>
-
+                <ul class="media-list tab-pane fade in active">
+                    <li class="media" ng-repeat="lead in leaders">
+                        <div class="media-left media-middle">
+                            <a href="">
+                            <img class="media-object img-thumbnail"
+                            ng-src={{lead.image}} alt="{{lead.name}}">
+                            </a>
+                        </div>
+                        <div class="media-body" >
+                            <h2 class="media-heading">{{lead.name}}
+                                <small>{{lead.designation}}</small>
+                                <span class="badge">{{lead.abbr}}</span>
+                            </h2>
+                            <p>{{lead.description}}</p>
+                        </div>
+                    </li>
+                </ul><!-- My implementation ends here -->
             </div>
              <div class="col-xs-12 col-sm-3">
                 <p style="padding:20px;"></p>
