--- a/Coursera_AngularJS/conFusion/app/views/home.html
+++ b/Coursera_AngularJS/conFusion/app/views/home.html
@@ -6,7 +6,23 @@
                 <h3 align=center>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-				<h4>Implement the Featured Dish Here</h4>
+				<ul class="media-list tab-pane fade in active">
+                    <li class="media" ng-repeat="lead in leaders">
+                        <div class="media-left media-middle">
+                            <a href="">
+                            <img class="media-object img-thumbnail"
+                            ng-src={{lead.image}} alt="{{lead.name}}">
+                            </a>
+                        </div>
+                        <div class="media-body" >
+                            <h2 class="media-heading">{{lead.name}}
+                                <small>{{lead.designation}}</small>
+                                <span class="badge">{{lead.abbr}}</span>
+                            </h2>
+                            <p>{{lead.description}}</p>
+                        </div>
+                    </li>
+                </ul><!-- My implementation ends here -->
             </div>
         </div>
 
@@ -18,6 +34,23 @@
             </div>
             <div class="col-xs-12 col-sm-9">
 				<h4>Implement the Promotion Here</h4>
+                <ul class="media-list tab-pane fade in active">
+                    <li class="media" ng-repeat="lead in leaders">
+                        <div class="media-left media-middle">
+                            <a href="">
+                            <img class="media-object img-thumbnail"
+                            ng-src={{lead.image}} alt="{{lead.name}}">
+                            </a>
+                        </div>
+                        <div class="media-body" >
+                            <h2 class="media-heading">{{lead.name}}
+                                <small>{{lead.designation}}</small>
+                                <span class="badge">{{lead.abbr}}</span>
+                            </h2>
+                            <p>{{lead.description}}</p>
+                        </div>
+                    </li>
+                </ul><!-- My implementation ends here -->
             </div>
         </div>
 
@@ -28,6 +61,23 @@
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
 				<h4>Implement the Executive Chef Info Here</h4>
+                <ul class="media-list tab-pane fade in active">
+                    <li class="media" ng-repeat="lead in leaders">
+                        <div class="media-left media-middle">
+                            <a href="">
+                            <img class="media-object img-thumbnail"
+                            ng-src={{lead.image}} alt="{{lead.name}}">
+                            </a>
+                        </div>
+                        <div class="media-body" >
+                            <h2 class="media-heading">{{lead.name}}
+                                <small>{{lead.designation}}</small>
+                                <span class="badge">{{lead.abbr}}</span>
+                            </h2>
+                            <p>{{lead.description}}</p>
+                        </div>
+                    </li>
+                </ul><!-- My implementation ends here -->
             </div>
         </div>
     </div>
