--- a/Coursera_AngularJS/conFusion/app/views/menu.html
+++ b/Coursera_AngularJS/conFusion/app/views/menu.html
@@ -37,7 +37,7 @@
                             <span class="label label-danger">{{dish.label}}</span>
                             <span class="badge">{{dish.price | currency}}</span>
                         </h2>
-                        <p ng-show="showDetails">{{dish.description}}</p>
+                        <p>{{lead.description}}</p>
                     </div>
                 </li>
             </ul>
