--- a/Coursera_AngularJS/conFusion/app/views/home.html
+++ b/Coursera_AngularJS/conFusion/app/views/home.html
@@ -1,4 +1,3 @@
-
     <div class="container" ng-controller="IndexController">
         <div class="row row-content">
             <div class="col-xs-12 col-sm-3 col-sm-push-9">
@@ -6,20 +5,20 @@
                 <h3 align=center>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-				<ul class="media-list tab-pane fade in active">
-                    <li class="media" ng-repeat="lead in leaders">
+                <ul class="media-list tab-pane fade in active">
+                    <li class="media">
                         <div class="media-left media-middle">
                             <a href="">
                             <img class="media-object img-thumbnail"
-                            ng-src={{lead.image}} alt="{{lead.name}}">
+                            ng-src={{dish.image}} alt="dish.name">
                             </a>
                         </div>
                         <div class="media-body" >
-                            <h2 class="media-heading">{{lead.name}}
-                                <small>{{lead.designation}}</small>
-                                <span class="badge">{{lead.abbr}}</span>
+                            <h2 class="media-heading">{{dish.name}}
+                                <span class="label label-danger">{{dish.label}}</span>
+                                <span class="badge">{{dish.price | currency}}</span>
                             </h2>
-                            <p>{{lead.description}}</p>
+                            <p>{{dish.description}}</p>
                         </div>
                     </li>
                 </ul><!-- My implementation ends here -->
@@ -33,21 +32,20 @@
                 <h3 align=center>This Month's Promotions</h3>
             </div>
             <div class="col-xs-12 col-sm-9">
-				<h4>Implement the Promotion Here</h4>
                 <ul class="media-list tab-pane fade in active">
-                    <li class="media" ng-repeat="lead in leaders">
+                    <li class="media">
                         <div class="media-left media-middle">
                             <a href="">
                             <img class="media-object img-thumbnail"
-                            ng-src={{lead.image}} alt="{{lead.name}}">
+                            ng-src={{promo.image}} alt="{{promo.name}}">
                             </a>
                         </div>
                         <div class="media-body" >
-                            <h2 class="media-heading">{{lead.name}}
-                                <small>{{lead.designation}}</small>
-                                <span class="badge">{{lead.abbr}}</span>
+                            <h2 class="media-heading">{{promo.name}}
+                                <small>{{promo.label}}</small>
+                                <span class="badge">{{promo.price | currency}}</span>
                             </h2>
-                            <p>{{lead.description}}</p>
+                            <p>{{promo.description}}</p>
                         </div>
                     </li>
                 </ul><!-- My implementation ends here -->
@@ -60,9 +58,8 @@
                 <h3 align=center>Meet our Culinary Specialists</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-				<h4>Implement the Executive Chef Info Here</h4>
                 <ul class="media-list tab-pane fade in active">
-                    <li class="media" ng-repeat="lead in leaders">
+                    <li class="media">
                         <div class="media-left media-middle">
                             <a href="">
                             <img class="media-object img-thumbnail"
