--- a/Coursera_AngularJS/conFusion/app/views/menu.html
+++ b/Coursera_AngularJS/conFusion/app/views/menu.html
@@ -29,7 +29,7 @@
                     <div class="media-left media-middle">
                         <a ui-sref="app.dishdetails({id: dish._id})">
                         <img class="media-object img-thumbnail"
-                        ng-src={{dish.image}} alt="Uthappizza">
+                        ng-src={{dish.image}} alt="dish.name">
                         </a>
                     </div>
                     <div class="media-body" >
@@ -37,7 +37,7 @@
                             <span class="label label-danger">{{dish.label}}</span>
                             <span class="badge">{{dish.price | currency}}</span>
                         </h2>
-                        <p>{{lead.description}}</p>
+                        <p ng-show="showDetails">{{dish.description}}</p>
                     </div>
                 </li>
             </ul>
