--- a/Coursera_AngularJS/conFusion/app/views/dishdetail.html
+++ b/Coursera_AngularJS/conFusion/app/views/dishdetail.html
@@ -4,7 +4,7 @@
                 <h3>{{message}}</h3>
         </div>
         <div class="col-xs-12" ng-if="showDish">
-            <button class="btn btn-xs btn-primary pull-right"
+            <button class="btn btn-md btn-primary pull-right"
                 type="button" ui-sref="app.menu">
                 Back to Menu
             </button>
