--- a/Coursera_AngularJS/conFusion/app/views/dishdetail.html
+++ b/Coursera_AngularJS/conFusion/app/views/dishdetail.html
@@ -1,81 +1,86 @@
 <div class="container">
     <div class="row row-content" ng-controller="DishDetailController">
         <div class="col-xs-12" ng-if="!showDish">
-                <h3>{{message}}</h3>
+            <h3>{{message}}</h3>
         </div>
         <div class="col-xs-12" ng-if="showDish">
-            <button class="btn btn-md btn-primary pull-right"
-                type="button" ui-sref="app.menu">
+            <button class="btn btn-md btn-primary pull-right" type="button" ui-sref="app.menu">
                 Back to Menu
             </button>
-        <div class="media">
-        <div class="col-xs-12">
             <div class="media">
-                <div class="media-left media-middle">
-                    <a href="#">
-                        <img class="media-object img-thumbnail" src="{{dish.image}}" alt="{{dish.name}}">
-                    </a>
-                </div>
-                <div class="media-body">
-                    <h2 class="media-heading">{{dish.name}}
+                <div class="col-xs-12">
+                    <div class="media">
+                        <div class="media-left media-middle">
+                            <a href="#">
+                                <img class="media-object img-thumbnail" src="{{dish.image}}" alt="{{dish.name}}">
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            <h2 class="media-heading">{{dish.name}}
                     <span class="label label-danger">{{dish.label}}</span>
                     <span class="badge">{{dish.price | currency}}</span>
                     </h2>
-                    <p>{{dish.description}}</p>
+                            <p>{{dish.description}}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-9 col-xs-offset-1">
+                    <h3>Customer comments</h3>
+                    <p>
+                        <label for="search">Sort by</label>
+                        <input type="text" id="search" ng-model="commentSearch">
+                    </p>
+                    <blockquote ng-repeat="comment in dish.comments | orderBy:commentSearch">
+                        <p>{{comment.rating}} Stars</p>
+                        <p>{{comment.comment}}</p>
+                        <footer>
+                            <cite title="Source Title">{{comment.author}}, {{comment.date | date }}</cite>
+                        </footer>
+                    </blockquote>
+                </div>
+                <div class="col-xs-9 col-xs-offset-1" ng-controller="DishCommentController">
+                    <blockquote ng-show="commentForm.$valid">
+                        <p>{{comment.rating}} Stars</p>
+                        <p>{{comment.comment}}</p>
+                        <footer><cite title="Source Title">{{comment.author}}</cite></footer>
+                    </blockquote>
+                    <form class="form-horizontal" name="commentForm" ng-submit="submitComment()" novalidate>
+                        <div class="form-group" ng-class="{ 'has-error' : commentForm.author.$error.required && !commentForm.author.$pristine }">
+                            <label for="author" class="col-sm-2 control-label">Your Name</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="author" name="author" placeholder="Enter Your Name" ng-model="comment.author" required>
+                                <span ng-show="commentForm.author.$error.required && !commentForm.author.$pristine" class="help-block">Your name is required.</span>
+                            </div>
+                        </div>
+                        <div class="form-group" ng-class="{ 'has-error' : invalidRatingSelection }">
+                            <label for="rating" class="col-sm-2 control-label">Number of Stars</label>
+                            <div class="col-sm-5">
+                                <label class="radio-inline">
+                                    <input name="rating" type="radio" ng-model="comment.rating" value="1"> 1</label>
+                                <label class="radio-inline">
+                                    <input name="rating" type="radio" ng-model="comment.rating" value="2"> 2</label>
+                                <label class="radio-inline">
+                                    <input name="rating" type="radio" ng-model="comment.rating" value="3"> 3</label>
+                                <label class="radio-inline">
+                                    <input name="rating" type="radio" ng-model="comment.rating" value="4"> 4</label>
+                                <label class="radio-inline">
+                                    <input name="rating" type="radio" ng-model="comment.rating" value="5" selected> 5</label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="coment" class="col-sm-2 control-label">Your Comments</label>
+                            <div class="col-sm-10" ng-class="{ 'has-error' : commentForm.comment.$error.required && !commentForm.comment.$pristine }">
+                                <textarea name="comment" class="form-control" rows="12" ng-model="comment.comment" required>
+                                </textarea>
+                                <span ng-show="commentForm.comment.$error.required && !commentForm.comment.$pristine" class="help-block">Your comments are required.</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <button type="submit" class="btn btn-primary" ng-disabled="commentForm.$invalid">Submit Comment</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
-        <div class="col-xs-9 col-xs-offset-1">
-            <h3>Customer comments</h3>
-            <p><label for="search">Sort by</label> <input type="text" id="search" ng-model="commentSearch"></p>
-            <blockquote ng-repeat="comment in dish.comments | orderBy:commentSearch">
-                <p>{{comment.rating}} Stars</p>
-                <p>{{comment.comment}}</p>
-                <footer>
-                    <cite title="Source Title">{{comment.author}}, {{comment.date | date }}</cite>
-                </footer>
-            </blockquote>
-        </div>
-        <div class="col-xs-9 col-xs-offset-1" ng-controller="DishCommentController">
-            <blockquote ng-show="commentForm.$valid">
-                <p>{{comment.rating}} Stars</p>
-                <p>{{comment.comment}}</p>
-                <footer><cite title="Source Title">{{comment.author}}</cite></footer>
-            </blockquote>
-            <form class="form-horizontal" name="commentForm"
-                ng-submit="submitComment()" novalidate>
-                <div class="form-group" ng-class="{ 'has-error' : commentForm.author.$error.required && !commentForm.author.$pristine }">
-                    <label for="author" class="col-sm-2 control-label">Your Name</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="author" name="author" placeholder="Enter Your Name"
-                        ng-model="comment.author" required>
-                        <span ng-show="commentForm.author.$error.required && !commentForm.author.$pristine" class="help-block">Your name is required.</span>
-                    </div>
-                </div>
-                <div class="form-group"  ng-class="{ 'has-error' : invalidRatingSelection }">
-                    <label for="rating" class="col-sm-2 control-label">Number of Stars</label>
-                    <div class="col-sm-5">
-                        <label class="radio-inline"><input name="rating" type="radio" ng-model="comment.rating" value="1"> 1</label>
-                        <label class="radio-inline"><input name="rating" type="radio" ng-model="comment.rating" value="2"> 2</label>
-                        <label class="radio-inline"><input name="rating" type="radio" ng-model="comment.rating" value="3"> 3</label>
-                        <label class="radio-inline"><input name="rating" type="radio" ng-model="comment.rating" value="4"> 4</label>
-                        <label class="radio-inline"><input name="rating" type="radio" ng-model="comment.rating" value="5" selected> 5</label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="coment" class="col-sm-2 control-label">Your Comments</label>
-                    <div class="col-sm-10" ng-class="{ 'has-error' : commentForm.comment.$error.required && !commentForm.comment.$pristine }">
-                        <textarea name="comment" class="form-control" rows="12" ng-model="comment.comment" required>
-                        </textarea>
-                        <span ng-show="commentForm.comment.$error.required && !commentForm.comment.$pristine" class="help-block">Your comments are required.</span>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary" ng-disabled="commentForm.$invalid">Submit Comment</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
